--- a/index.html
+++ b/index.html
@@ -276,7 +276,7 @@
               <h4>Muut</h4>
               <ul>
                 <li> 2011 - 2012, armeija</li>
-                <li> 2012 - 2014, LAMK, Ympäristöteknologian ko. (jätin kesken)</li>
+                <li> 2012 - 2014, LAMK, Ympäristöteknologian ko.</li>
               </ul>
             </div>
           </div>
@@ -317,7 +317,7 @@
     </section><!-- End Resume Section -->
 
     <!-- ======= Portfolio Section ======= -->
-    <!-- <section id="portfolio" class="portfolio section-bg">
+    <section id="portfolio" class="portfolio section-bg">
       <div class="container">
 
         <div class="section-title">
@@ -431,7 +431,8 @@
         </div>
 
       </div>
-    </section>End Portfolio Section -->
+    </section> 
+    <!-- End Portfolio Section -->
 
     <!-- ======= Services Section ======= -->
     <!-- <section id="services" class="services">
