--- a/index.html
+++ b/index.html
@@ -82,7 +82,6 @@
 
         <div class="section-title">
           <h2>Tietoa minusta</h2>
-          <p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia fugiat sit in iste officiis commodi quidem hic quas.</p>
         </div>
 
         <div class="row">
@@ -90,7 +89,7 @@
             <img src="assets/img/profilePic.jpg" class="img-fluid" alt="">
           </div>
           <div class="col-lg-8 pt-4 pt-lg-0 content" data-aos="fade-left">
-            <h3>Web, mobiili &amp; ohjelmisto kehittäjä.</h3>
+            <h3>Web, mobiili &amp; ohjelmistokehittäjä.</h3>
             <p class="fst-italic">
               Aloitin opiskelemaan Tieto- ja viestintätekniikkaa HAMK:ssa vuoden 2019 syksyllä. Aion valmistua vuoden 2022 aikana.
             </p>
@@ -109,10 +108,7 @@
                 </ul>
               </div>
             </div>
-            <p>
-              Officiis eligendi itaque labore et dolorum mollitia officiis optio vero. Quisquam sunt adipisci omnis et ut. Nulla accusantium dolor incidunt officia tempore. Et eius omnis.
-              Cupiditate ut dicta maxime officiis quidem quia. Sed et consectetur qui quia repellendus itaque neque. Aliquid amet quidem ut quaerat cupiditate. Ab et eum qui repellendus omnis culpa magni laudantium dolores.
-            </p>
+           
           </div>
         </div>
 
@@ -174,7 +170,7 @@
 
         <div class="section-title">
           <h2>Ohjelmointikielet ja tekniikat</h2>
-          <p>HTML, CSS, JQuery, Bootstrap, Django, SQL, WPF, Azure, Ubuntu, Android apps, Apache http server, Git, XAML, Wordpress, NodeJS, React, Redux, MongoDB, Express.js, Heroku, GraphQL, REST, React Native, JSON.</p>
+          <p>HTML, CSS, JQuery, Bootstrap, Django, SQL, WPF, Azure, Ubuntu, Android apps, Apache http server, Git, XAML, Wordpress, NodeJS, React, Redux, MongoDB, Express.js, Heroku, GraphQL, REST, React Native, JSON, Docker, CI/CD.</p>
         </div>
 
         <div class="row skills-content">
@@ -242,7 +238,6 @@
 
         <div class="section-title">
           <h2>Ansioluettelo</h2>
-          <p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia fugiat sit in iste officiis commodi quidem hic quas.</p>
         </div>
 
         <div class="row">
@@ -267,16 +262,15 @@
               <h4>Tieto- ja viestintätekniikka</h4>
               <h5>2019 -></h5>
               <p><em>HAMK</em></p>
-              <p>Web ja mobiili sovelluskehitys</p>
+              <p>Ohjelmisto- ja sovelluskehitys</p>
             </div>
 
-            <h3 class="resume-title">Projektit</h3>
+            <h3 class="resume-title">Muut</h3>
 
             <div class="resume-item pb-0">
-              <h4>Muut</h4>
               <ul>
                 <li> 2011 - 2012, armeija</li>
-                <li> 2012 - 2014, LAMK, Ympäristöteknologian ko.</li>
+                <li> 2012 - 2016, LAMK, Ympäristöteknologian ko.</li>
               </ul>
             </div>
           </div>
@@ -306,7 +300,7 @@
             </div>
             <div class="resume-item">
               <h4>Etra Oy</h4>
-              <h5>04/2019 – 08/2019 &amp 05/2020 – 08/2020</h5>
+              <h5>10/2018 – 08/2019 &amp 05/2020 – 08/2020 &amp 05/2021 - 10/2021</h5>
               <p><em>Varasto- ja terminaalityöntekijä</em></p>
              <p>Työntömastotrukin sekä korkeakeräilytrukin työt</p>
             </div>
@@ -317,7 +311,7 @@
     </section><!-- End Resume Section -->
 
     <!-- ======= Portfolio Section ======= -->
-    <section id="portfolio" class="portfolio section-bg">
+    <!-- <section id="portfolio" class="portfolio section-bg">
       <div class="container">
 
         <div class="section-title">
@@ -431,7 +425,7 @@
         </div>
 
       </div>
-    </section> 
+    </section>  -->
     <!-- End Portfolio Section -->
 
     <!-- ======= Services Section ======= -->
